refactor : 글-댓글 형식의 entity의 부모 클래스 생성
Article 클래스가 공통적으로 post형식의 글들의 속성을 가짐.
title, content, comment, viewCount, likeCount

lesson, order, post, sheetPost는 Article을 상속받음.